--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Information System</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:wght@100;200;300;400;600;700&family=Rubik+Moonrocks&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style_vyom.css"> 
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <button onclick="window.location.href = '/adminLogin'"> Admin </button>
-    <button onclick="window.location.href = '/instructorLogin'"> Instructor </button>
-    <button onclick="window.location.href = '/studentLogin'"> Student </button>
+    <section>
+        <nav>
+            <a href:="/"><img src="../img/Logo1.png" alt=""></a>
+        <div class="nav-links" id="navLink">
+            <ul>
+                <li><a href="/" class="active">HOME</a></li>
+                <li><a href="/support">SUPPORT</a></li>
+                <li><a href="/studentdash">SD</a></li>
+            </ul>
+        </div>
+       </nav>
+
+    </section>
+    <section class="option" id="option">
+        <div class="container-box">
+        <a href="/studentLogin">
+        <div class="box">
+            <img src="/img/student.png" class="logbox" alt="">
+            <h2><br>Student Login</h2>
+        </div>
+        </a>
+         <a href="/instructorLogin">
+        <div class="box">
+            <img src="/img/faculty.png" class="logbox" alt="">
+            <h2><br>Faculty Login</h2>
+        </div>
+         </a>
+        <a href="/adminLogin">
+        <div class="box">
+            <img src="/img/administrator.png" class="logbox" alt="">
+            <h2><br>Admin Login</h2>
+        </div>
+        </a>
+    </div>
+    </section>
+
+    <footer class="footer">
+        <p class="contact">Helpline Number: +265 8887774</p>
+    </footer>
 </body>
 </html>
