--- a/views/instructorHome.ejs
+++ b/views/instructorHome.ejs
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Faculty dashboard</title>
 </head>
-
 <body>
-    <h1>
-        Welcome Back Instructor, <%= instructor.fullname %>
-    </h1>
-    <button onclick="window.location.href = '/viewInstructorDetails'"> View Instructor Details</button>
-    <button onclick="window.location.href = '/updateInstructorDetails'"> Update Instructor Details</button>
-    <button onclick="window.location.href = '/instructorSemester'"> View semester </button>
-    <form action="/logoutInstructor?_method=DELETE" method="POST">
-        <button type="submit">Log Out</button>
-    </form>
-</body>
+    <%- include('instructorNavbar') %>
+    <!-- main body section -->
+    <div class="main-body">
+        <h1> Faculty Dashboard</h1>
+        <h1>
 
+        </h1>
+    </div>
+</body>
 </html>
