--- a/views/studentLogin.ejs
+++ b/views/studentLogin.ejs
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/stylestudentlogin.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Student Login</title>
 </head>
 <body>
     <form action="/studentLogin" method="post">
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
+        <div class="container main">
+            <div class="row">
+                <div class="col-md-6 side-image">  <a for="" class="close-btn1 fa fa-close" href="/"></a> 
+                </div>
+                <div class="col-md-6 right">
+                    <a for="" class="close-btn fa fa-close" href="/"></a>
+                     <div class="input-box">
+                        <header  >Student Login</header>
+                        <div class="input-field">
+                            <input type="text" class="input" id="username" name="email"  autocomplete="off">
+                            <label for="username">Email</label>
+                        </div>
+                        <div class="input-field">
+                            <input type="password" class="input" id="password" name="password" >
+                            <label for="password">Password</label>
+                        </div>
+                        <div class="input-field">
+                            <input type="submit" class="submit" value="Sign In">
+                            
+                        </div>
+                        <div class="signin">
+                            <span>Having issue in login? <a href="/support">Help</a></span>
+                            <br>
+                            <% if (messages.error) { %>
+                                <% console.log(messages.error) %>
+                                <p style="color: red;"> <%= messages.error %></p>
+                                    <% } %>
+                        </div>
+                     </div>
+                </div>
+            </div>
+        </div>
     </form>
 
-    <% if (messages.error) { %>
-        <%= messages.error %>
-    <% } %>
+    
 </body>
 </html>
