--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -42,11 +42,11 @@
             </li>
             <li>
                 <a href="/viewCourse">
-                    <i class='bx bx-folder-plus'></i>
+                    <i class='bx bxs-book-add' ></i>
                     <span class="link_name">Course Management</span>
                 </a>
                 <a href="/viewProgram">
-                    <i class='bx bxs-file-plus'></i>
+                    <i class='bx bx-folder-plus'></i>
                     <span class="link_name">Program Management</span>
                 </a>
                 <a href="/viewSemester">
@@ -54,7 +54,7 @@
                     <span class="link_name">Semester Management</span>
                 </a>
                 <a href="#">
-                    <i class='bx bx-money'></i>
+                    <i class='bx bx-money-withdraw' ></i>
                     <span class="link_name">Fees Management</span>
                 </a>
             </li>
@@ -70,7 +70,7 @@
             <li>
                 <div class="iocn-link">
                     <a href="#">
-                        <i class='bx bxs-user-account'></i>
+                        <i class='bx bx-cog' ></i>
                         <span class="link_name">Account</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow'></i>
