--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style_vyom.css"> 
     <link rel="stylesheet" href="css/nav.css">
+    
 </head>
 <body>
     <section>
@@ -19,8 +20,7 @@
         <div class="nav-links" id="navLink">
             <ul>
                 <li><a href="/" class="active">HOME</a></li>
-                <li><a href="/support">SUPPORT</a></li>
-                <li><a href="/studentdash">SD</a></li>
+                <li><a href="/">SUPPORT</a></li>
             </ul>
         </div>
        </nav>
@@ -53,4 +53,5 @@
         <p class="contact">Helpline Number: +265 8887774</p>
     </footer>
 </body>
+
 </html>
