--- a/views/studentNavbar.ejs
+++ b/views/studentNavbar.ejs
@@ -19,7 +19,7 @@
             <li>
                 <div class="iocn-link">
                     <a href="#">
-                        <i class='bx bxs-user-plus bx-sm'></i>
+                        <i class='bx bxs-user-detail' ></i>
                         <span class="link_name">Student Details</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow'></i>
@@ -32,7 +32,7 @@
             
             <li>
                 <a href="/studentHome" class="attedance-logo">
-                    <i class='bx bxs-user-check bx-sm'></i>
+                    <i class='bx bx-money-withdraw' ></i>
                     <span class="link_name">Fees</span>
                 </a>
                 <!-- <ul class="sub-menu blank">
@@ -45,15 +45,15 @@
                     <span class="link_name">Semester Registration</span>
                 </a>
                 <a href="/semesterRegistration">
-                    <i class='bx bx-folder-plus'></i>
+                    <i class='bx bxs-file-plus'></i>
                     <span class="link_name">Add-Drop course</span>
                 </a>
                 <a href="/semesterResults">
-                    <i class='bx bxs-file-plus'></i>
+                    <i class='bx bxs-report'></i>
                     <span class="link_name">Result</span>
                 </a>
                 <a href="/studentHome">
-                    <i class='bx bxs-file-plus'></i>
+                    <i class='bx bxs-user-check bx-sm'></i>
                     <span class="link_name">Attendance</span>
                 </a>
             </li>
@@ -69,7 +69,7 @@
             <li>
                 <div class="iocn-link">
                     <a href="#">
-                        <i class='bx bxs-user-account'></i>
+                        <i class='bx bx-cog' ></i>
                         <span class="link_name">Account</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow'></i>
