--- a/views/instructorNavbar.ejs
+++ b/views/instructorNavbar.ejs
@@ -19,7 +19,7 @@
             <li>
                 <div class="iocn-link">
                     <a href="#">
-                        <i class='bx bxs-user-plus bx-sm'></i>
+                        <i class='bx bxs-user-detail' ></i>
                         <span class="link_name">Faculty Details</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow'></i>
@@ -31,14 +31,14 @@
             </li>
             <li>
                 <a href="/semesterRegistration">
-                    <i class='bx bx-folder-plus'></i>
+                    <i class='bx bxs-report'></i>
                     <span class="link_name">Course Grades</span>
                 </a>
             </li>
             <li>
                 <div class="iocn-link">
                     <a href="#">
-                        <i class='bx bxs-user-account'></i>
+                        <i class='bx bx-cog' ></i>
                         <span class="link_name">Account</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow'></i>
