--- a/views/instructorNavbar.ejs
+++ b/views/instructorNavbar.ejs
@@ -11,7 +11,7 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="/studentHome" >
+                <a href="/instructorHome" >
                     <i class='bx bxs-home'></i>
                     <span class="link_name">Home</span>
                 </a>
@@ -30,7 +30,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/semesterRegistration">
+                <a href="/instructorSemester">
                     <i class='bx bxs-report'></i>
                     <span class="link_name">Course Grades</span>
                 </a>
@@ -47,7 +47,7 @@
                     <!-- <li><a class="link_name" href="#">Profile</a></li> -->
                     <li><a href="#">Account Settings</a></li>
                     <li><a href="#">Reset Password</a></li>
-                    <form action="/logoutStudent?_method=DELETE" method="POST">
+                    <form action="/logoutInstructor?_method=DELETE" method="POST">
                         <button type="submit">Log Out</button>
                     </form>
                 </ul>
