--- a/views/addGrade.ejs
+++ b/views/addGrade.ejs
@@ -1,50 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    <h3>Course Name: <%= gradeStudents[0].courseEnrolled.name %></h3>
-    <h3>Course Code: <%= gradeStudents[0].courseEnrolled.code %></h3>
-    <h3>Course Credits: <%= gradeStudents[0].courseEnrolled.credits %></h3>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <form action="/addGrade" method="post">
-        <input type="hidden" name="course" value="<%=gradeStudents[0].courseEnrolled.id %>">
-        <input type="hidden" name="semester" value="<%=gradeStudents[0].semesterEnrolled.id %>">
-        <table>
-            <tr>
-                <th>Student ID</th>
-                <th>Student Name</th>
-                <th>Grade</th>
-            </tr>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/table.css" />
+    <title>Assign Grades</title>
+</head>
+
+<body>
+    <%- include('instructorNavbar') %>
+        <div class="header">
+            <h2>Assign Grades</h2>
+        </div>
+        <div class="sub-header">
             <% if (gradeStudents.length==0) { %>
-                <tr>
-                    <td colspan="3">
-                        No courses found
-                    </td>
-                </tr>
+                <h5>No students enrolled in this course</h5>
                 <% } else { %>
-                    <% for (var i=0; i <gradeStudents.length; i++) { %>
-                        <tr>
-                            <td>
-                                <%= gradeStudents[i].studentEnrolled.studentID %>
-                            </td>
-                            <td>
-                                <%= gradeStudents[i].studentEnrolled.firstname %> <%= gradeStudents[i].studentEnrolled.middlename %> <%= gradeStudents[i].studentEnrolled.lastname %>
-                            </td>
-                            <td>
-                                <input type="number" name="grades" max="10" min="0" step="1" value="<%= gradeStudents[i].grade %>" placeholder="Enter grade">
-                                <input type="hidden" name="student" value="<%= gradeStudents[i].studentEnrolled.id %>">
-                            </td>
-                        </tr>
-                        <% } %>
-                    <% } %>
-        </table>
-        <button type="submit">Submit</button>
-    </form>
+                    <h5>Course Name: <%= gradeStudents[0].courseEnrolled.name %>
+                    </h5>
+                    <h5>Course Code: <%= gradeStudents[0].courseEnrolled.code %>
+                    </h5>
+                    <h5>Course Credits: <%= gradeStudents[0].courseEnrolled.credits %>
+                    </h5>
+                    <h5>Number of students Registered: <%= gradeStudents.length %>
+                            </h1>
+                            <% } %>
+
+        </div>
+        <form action="/addGrade" method="post">
+            <input type="hidden" name="course" value="<%=gradeStudents[0].courseEnrolled.id %>">
+            <input type="hidden" name="semester" value="<%=gradeStudents[0].semesterEnrolled.id %>">
+            <table>
+                <section class="home-section">
+                    <div class="table-container">
+
+                        <ul class="table-responsive-lg">
+                            <li class="thead-dark">
+                                <div class="col col-1">SR No</div>
+                                <div class="col col-2">Student ID</div>
+                                <div class="col col-3">Student Name</div>
+                                <div class="col col-4">Grade</div>
+                            </li>
+
+
+                            <% for (var i=0; i <gradeStudents.length; i++) { %>
+
+                                <li class="table-row">
+                                    <div class="col col-1" data-label="#">
+                                        <%= i+1 %>
+                                    </div>
+                                    <div class="col col-2" data-label="Student ID">
+                                        <%= gradeStudents[i].studentEnrolled.studentID %>
+                                    </div>
+                                    <div class="col col-3" data-label="Name">
+                                        <%= gradeStudents[i].studentEnrolled.firstname %>
+                                            <%= gradeStudents[i].studentEnrolled.middlename %>
+                                                <%= gradeStudents[i].studentEnrolled.lastname %>
+                                    </div>
+                                    <div class="col col-4" data-label="Name">
+                                        <input type="number" name="grades" max="10" min="0" step="1"
+                                            value="<%= gradeStudents[i].grade %>" placeholder="Enter grade">
+                                        <input type="hidden" name="student"
+                                            value="<%= gradeStudents[i].studentEnrolled.id %>">
+                                    </div>
+                                </li>
+                                <% } %>
+                        </ul>
+                        <% if (gradeStudents.length!=0) { %>
+                            <button type="submit">Submit</button>
+                            <% } %>
+                    </div>
+                </section>
+        </form>
 </body>
+
 </html>
