--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -11,65 +11,66 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/table.css" />
     <title>Grade Card</title>
 </head>
 
 <body>
     <%- include('studentNavbar') %>
-        <div class="main-body-top">
+    <div class="header">
+        <h2>Grade Card</h2>
+    </div>
+    <div class="sub-header">
+        <h5>
+            Semester number: <%= tuple[1] %>
+        </h5>
+        <h5>Name: <%= result[0].studentEnrolled.firstname %>
+                <%= result[0].studentEnrolled.middlename %>
+                    <%= result[0].studentEnrolled.lastname %>
+        </h5>
+        <h5>Student ID: <%= result[0].studentEnrolled.studentID %>
+        </h5>
+    </div>
+    <section class="home-section">
+        <div class="table-container">
             <form action="/gradeCard" method="post">
-                <h3>
-                    <%= result[0].semesterEnrolled.name %>
-                </h3>
-                <h3>
-                    Semester number: <%= tuple[1] %>
-                </h3>
-                <h3>Name: <%= result[0].studentEnrolled.firstname %>
-                        <%= result[0].studentEnrolled.middlename %>
-                            <%= result[0].studentEnrolled.lastname %>
-                </h3>
-                <h3>Student ID: <%= result[0].studentEnrolled.studentID %>
-                </h3>
+                <ul class="table-responsive-lg">
+                    <li class="thead-dark">
+                        <div class="col col-1">SR No</div>
+                        <div class="col col-2">Course Code</div>
+                        <div class="col col-3">Course Name</div>
+                        <div class="col col-4">Course Credits</div>
+                        <div class="col col-5">Grade</div>
+                    </li>
 
-                <br>
-                <table>
-                    <tr>
-                        <th>SR No</th>
-                        <th>Course Code</th>
-                        <th>Course Name</th>
-                        <th>Course Credits</th>
-                        <th>Grade</th>
-                    </tr>
                     <% var spi=0,count=0 %>
                         <% for (var i=0; i <result.length; i++) { %>
-                            <tr>
-                                <td>
-                                    <%= i+1 %>
-                                </td>
-                                <td>
-                                    <%= result[i].courseEnrolled.code %>
-                                </td>
-                                <td>
-                                    <%= result[i].courseEnrolled.name %>
-                                </td>
-                                <td>
-                                    <%= result[i].courseEnrolled.credits %>
-                                </td>
-                                <td>
-                                    <% if (result[i].grade) { %>
-                                        <%= result[i].grade %>
-                                            <% spi +=result[i].grade %>
-                                                <% count++ %>
-                                                    <% } else { %>
-                                                        -
-                                                        <% } %>
 
-                                </td>
-                            </tr>
-                            <% } %>
-
-                </table>
-
+                        <li class="table-row">
+                            <div class="col col-1" data-label="#">
+                                <%= i+1 %>
+                            </div>
+                            <div class="col col-2" data-label="Student ID">
+                                <%= result[i].courseEnrolled.code %>
+                            </div>
+                            <div class="col col-3" data-label="Name">
+                                <%= result[i].courseEnrolled.name %>
+                            </div>
+                            <div class="col col-4" data-label="Batch">
+                                <%= result[i].courseEnrolled.credits %>
+                            </div>
+                            <div class="col col-5" data-label="Branch">
+                                <% if (result[i].grade) { %>
+                                    <%= result[i].grade %>
+                                        <% spi +=result[i].grade %>
+                                            <% count++ %>
+                                                <% } else { %>
+                                                    -
+                                                    <% } %>
+                            </div>
+                        </li>
+                        <% } %>
+                </ul>
                 <% if (count==6) { %>
                     <% spi /=6 %>
                         <% spi=Math.round(spi * 100) / 100 %>
@@ -83,9 +84,10 @@
                                 <button disabled type="submit" name="result"
                                     value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
                                 <% } %>
-
             </form>
+
         </div>
+    </section>
 
 
 </body>
