--- a/views/gradeSemester.ejs
+++ b/views/gradeSemester.ejs
@@ -1,48 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    <h3>Semester : <%= courseAssignment[0].semesterAssigned.name %></h3>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <form action="/gradeAssign" method="post">
-        <table>
-            <tr>
-                <th>Program</th>
-                <th>Course Code</th>
-                <th>Course Name</th>
-                <th>Assign grades</th>
-            </tr>
-            <% if (courseAssignment.length==0) { %>
-                <tr>
-                    <td colspan="4">
-                        No courses found
-                    </td>
-                </tr>
-                <% } else { %>
-                    <% for (var i=0; i <courseAssignment.length; i++) { %>
-                        <tr>
-                            <td>
-                                <%= courseAssignment[i].programAssigned.degreeOffered.name %>  <%= courseAssignment[i].programAssigned.branchOffered.name %>
-                            </td>
-                            <td>
-                                <%= courseAssignment[i].courseAssigned.code %>
-                            </td>
-                            <td>
-                                <%= courseAssignment[i].courseAssigned.name %>
-                            </td>
-                            <td>
-                                <button type='submit' name="x" value="<%= courseAssignment[0].semesterAssigned.id + " " + courseAssignment[i].courseAssigned.id + " " + courseAssignment[i].programAssigned.id%>">Grades</button>
-                            </td>
-                        </tr>
-                        <% } %>
-                    <% } %>
-        </table>
-    </form>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/table.css" />
+    <title>Choose Course</title>
+</head>
+
+<body>
+    <%- include('instructorNavbar') %>
+
+        <div class="header">
+            <h2>Choose Course</h2>
+        </div>
+        <section class="home-section">
+            <div class="table-container">
+                <form action="/gradeAssign" method="post">
+                    <ul class="table-responsive-lg">
+                        <li class="thead-dark">
+                            <div class="col col-1">SR No</div>
+                            <div class="col col-2">Program</div>
+                            <div class="col col-3">Course Code</div>
+                            <div class="col col-4">Course Name</div>
+                            <div class="col col-5">Course Credits</div>
+                            <div class="col col-6">Assign Grades</div>
+                        </li>
+
+
+                        <% for (var i=0; i <courseAssignment.length; i++) { %>
+
+                            <li class="table-row">
+                                <div class="col col-1" data-label="#">
+                                    <%= i+1 %>
+                                </div>
+                                <div class="col col-2" data-label="Student ID">
+                                    <%= courseAssignment[i].programAssigned.degreeOffered.name %>
+                                        <%= courseAssignment[i].programAssigned.branchOffered.name %>
+                                </div>
+                                <div class="col col-3" data-label="Name">
+                                    <%= courseAssignment[i].courseAssigned.code %>
+                                </div>
+                                <div class="col col-4" data-label="Name">
+                                    <%= courseAssignment[i].courseAssigned.name %>
+                                </div>
+                                <div class="col col-4" data-label="Name">
+                                    <%= courseAssignment[i].courseAssigned.credits %>
+                                </div>
+                                <div class="col col-4" data-label="Name">
+                                    <button type='submit' name="x"
+                                        value="<%= courseAssignment[0].semesterAssigned.id + " " + courseAssignment[i].courseAssigned.id + " " + courseAssignment[i].programAssigned.id%>">Select</button>
+                                </div>
+                            </li>
+                            <% } %>
+                    </ul>
+                </form>
+
+            </div>
+        </section>
 </body>
+
 </html>
