--- a/views/instructorSemester.ejs
+++ b/views/instructorSemester.ejs
@@ -5,42 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/table.css" />
+    <title>Semesters</title>
 </head>
 
 <body>
+    <%- include('instructorNavbar') %>
+        <div class="header">
+            <h2>Choose Semester</h2>
+        </div>
+        <section class="home-section">
+            <div class="table-container">
+                <form action="/instructorSemester" method="post">
+                    <ul class="table-responsive-lg">
+                        <li class="thead-dark">
+                            <div class="col col-1">SR No</div>
+                            <div class="col col-2">Semester Name</div>
+                            <div class="col col-3">Select</div>
+                        </li>
 
-    <form action="/instructorSemester" method="post">
-        <table>
-            <tr>
-                <th>Semester Number</th>
-                <th>Semester Name</th>
-                <th>Details</th>
-            </tr>
-            <% if (semester.length==0) { %>
-                <tr>
-                    <td colspan="3">
-                        No courses assigned
-                    </td>
-                </tr>
-                <% } else { %>
-                    <% for (var i=0; i <semester.length; i++) { %>
-                        <tr>
-                            <td>
-                                Semester <%= i+1 %>
-                            </td>
-                            <td>
-                                <%= semester[i].name %>
-                            </td>
-                            <td>
-                                <button type='submit' name="x" value="<%= semester[i].id %>">view</button>
-                            </td>
-                        </tr>
-                        <% } %>
-                    <% } %>
-        </table>
-    </form>
+
+                        <% for (var i=0; i <semester.length; i++) { %>
+
+                            <li class="table-row">
+                                <div class="col col-1" data-label="#">
+                                    <%= i+1 %>
+                                </div>
+                                <div class="col col-2" data-label="Student ID">
+                                    <%= semester[i].name %>
+                                </div>
+                                <div class="col col-3" data-label="Name">
+                                    <button type='submit' name="x" value="<%= semester[i].id %>">Select</button>
+                                </div>
+                            </li>
+                            <% } %>
+                    </ul>
+                </form>
+
+            </div>
+        </section>
 </body>
 
 </html>
