--- a/views/temp.ejs
+++ b/views/temp.ejs
@@ -1,20 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="/instructorLogin" method="post">
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
-    </form>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <% if (messages.error) { %>
-        <%= messages.error %>
-    <% } %>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Branches</title>
+</head>
+
+<body>
+    <%- include('adminNavbar') %>
+        <div class="main-body-top">
+            <h3>Branches</h3>
+
+            <form action="/viewBranch" method="post">
+                <table>
+                    <tr>
+                        <th>SR No</th>
+                        <th>Name</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                    <% if (branch.length==0) {%>
+                        <tr>
+                            <td colspan="6">
+                                No branches found
+                            </td>
+                        </tr>
+                        <% } %>
+                            <% for (var i=0; i <branch.length; i++) { %>
+                                <tr>
+                                    <td>
+                                        <%= i+1 %>
+                                    </td>
+                                    <td>
+                                        <%= branch[i].name %>
+                                    </td>
+                                    <td>
+                                        <button type='submit' name="edit" value="<%= branch[i].id %>"><i
+                                                class='far fa-edit'></i></button>
+                                    </td>
+                                    <td>
+                                        <button type='submit' name="delete" value="<%= branch[i].id %>"
+                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                                    </td>
+                                </tr>
+                                <% } %>
+                </table>
+            </form>
+
+            <br>
+            <button onclick="window.location.href = '/addBranch'"> Add branch </button>
+        </div>
+
+
+
+        <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
+        <script>
+            let btns = document.getElementsByClassName('delete-btn');
+
+            for (i of btns) {
+                i.addEventListener('click', function () {
+                    if (!confirm("Are you sure you want to delete?")) {
+                        event.preventDefault();
+                    }
+                });
+            }
+        </script>
 </body>
+
 </html>
