--- a/views/viewBranch.ejs
+++ b/views/viewBranch.ejs
@@ -11,53 +11,52 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Branches</title>
+    <link rel="stylesheet" href="/css/table.css" />
+    <title>View Branches</title>
 </head>
 
 <body>
     <%- include('adminNavbar') %>
-        <div class="main-body-top">
-            <h3>Branches</h3>
-
+    <div class="header">
+        <h2>Branch Details</h2>
+    </div>
+    <section class="home-section">
+        <div class="table-container">
             <form action="/viewBranch" method="post">
-                <table>
-                    <tr>
-                        <th>SR No</th>
-                        <th>Name</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                    <% if (branch.length==0) {%>
-                        <tr>
-                            <td colspan="6">
-                                No branches found
-                            </td>
-                        </tr>
-                        <% } %>
-                            <% for (var i=0; i <branch.length; i++) { %>
-                                <tr>
-                                    <td>
-                                        <%= i+1 %>
-                                    </td>
-                                    <td>
-                                        <%= branch[i].name %>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="edit" value="<%= branch[i].id %>"><i
-                                                class='far fa-edit'></i></button>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="delete" value="<%= branch[i].id %>"
-                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
-                                    </td>
-                                </tr>
-                                <% } %>
-                </table>
-            </form>
+                <ul class="table-responsive-lg">
+                    <li class="thead-dark">
+                        <div class="col col-1">SR No</div>
+                        <div class="col col-2">Name</div>
+                        <div class="col col-5">Edit</div>
+                        <div class="col col-6">Delete</div>
+                    </li>
 
+                    <% for (var i=0; i <branch.length; i++) { %>
+
+                        <li class="table-row">
+                            <div class="col col-1" data-label="#">
+                                <%= i+1 %>
+                            </div>
+                            <div class="col col-2" data-label="Student ID">
+                                <%= branch[i].name %>
+                            </div>
+                            <div class="col col-5" data-label="Name">
+                                <button type='submit' name="edit" value="<%= branch[i].id %>"><i
+                                    class='far fa-edit'></i></button>
+                            </div>
+                            <div class="col col-6" data-label="Batch">
+                                <button type='submit' name="delete" value="<%= branch[i].id %>"
+                                    class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                            </div>
+                        </li>
+                        <% } %>
+                </ul>
+            </form>
             <br>
             <button onclick="window.location.href = '/addBranch'"> Add branch </button>
+
         </div>
+    </section>
 
 
 
