--- a/views/viewCourse.ejs
+++ b/views/viewCourse.ejs
@@ -2,74 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/table.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Courses</title>
+    <title>View Courses</title>
 </head>
 
 <body>
     <%- include('adminNavbar') %>
-        <div class="main-body-top">
-            <h3>Courses</h3>
-            <form action="/viewCourse" method="post">
-                <table>
-                    <tr>
-                        <th>SR No</th>
-                        <th>Name</th>
-                        <th>Code</th>
-                        <th>Credits</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-
-                    <% if (course.length==0) {%>
-                        <tr>
-                            <td colspan="6">
-                                No courses found
-                            </td>
-                        </tr>
-                        <% } %>
-
-                            <% for (var i=0; i <course.length; i++) { %>
-                                <tr>
-                                    <td>
-                                        <%= i+1 %>
-                                    </td>
-                                    <td>
-                                        <%= course[i].name %>
-                                    </td>
-                                    <td>
-                                        <%= course[i].code %>
-                                    </td>
-                                    <td>
-                                        <%= course[i].credits %>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="edit" value="<%= course[i].id %>"><i
-                                                class='far fa-edit'></i></button>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="delete" value="<%= course[i].id %>"
-                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
-                                    </td>
-                                </tr>
-                                <% } %>
-                </table>
-            </form>
-
-            <br>
-            <button onclick="window.location.href = '/addCourse'"> Add course </button>
+        <div class="header">
+            <h2>Course Details</h2>
         </div>
+        <section class="home-section">
+            <div class="table-container">
+                <form action="/viewCourse" method="post">
+                    <ul class="table-responsive-lg">
+                        <li class="thead-dark">
+                            <div class="col col-1">SR No</div>
+                            <div class="col col-2">Name</div>
+                            <div class="col col-3">Code</div>
+                            <div class="col col-4">Credits</div>
+                            <div class="col col-5">Edit</div>
+                            <div class="col col-6">Delete</div>
+                        </li>
+
+                        <% for (var i=0; i <course.length; i++) { %>
+
+                            <li class="table-row">
+                                <div class="col col-1" data-label="#">
+                                    <%= i+1 %>
+                                </div>
+                                <div class="col col-2" data-label="Student ID">
+                                    <%= course[i].name %>
+                                </div>
+                                <div class="col col-3" data-label="Name">
+                                    <%= course[i].code %>
+                                </div>
+                                <div class="col col-4" data-label="Batch">
+                                    <%= course[i].credits %>
+                                </div>
+                                <div class="col col-5" data-label="Branch">
+                                    <button type='submit' name="edit" value="<%= course[i].id %>">
+                                        <i class='far fa-edit'></i>
+                                    </button>
+                                </div>
+                                <div class="col col-6" data-label="Branch">
+                                    <button type='submit' name="delete" value="<%= course[i].id %>" class="delete-btn">
+                                        <i class='far fa-trash-alt'></i>
+                                    </button>
+                                </div>
+                            </li>
+                            <% } %>
+                    </ul>
+                </form>
 
 
-        <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
+                <button onclick="window.location.href = '/addCourse'"> Add course </button>
+                <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
+
+            </div>
+        </section>
+        
         <script>
             let btns = document.getElementsByClassName('delete-btn');
 
