--- a/views/viewSemester.ejs
+++ b/views/viewSemester.ejs
@@ -2,62 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/table.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Semesters</title>
+    <title>View Semester</title>
 </head>
 
 <body>
     <%- include('adminNavbar') %>
-        <div class="main-body-top">
-            <h3>Semesters</h3>
+    <div class="header">
+        <h2>Semester Details</h2>
+    </div>
+    <section class="home-section">
+        <div class="table-container">
             <form action="/viewSemester" method="post">
-                <table>
-                    <tr>
-                        <th>SR No</th>
-                        <th>Name</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                    <% if (!semester) {%>
-                        <tr>
-                            <td colspan="4">
-                                No semesters found
-                            </td>
-                        </tr>
-                        <% } else { %>
-                            <% for (var i=0; i <semester.length; i++) { %>
-                                <tr>
-                                    <td>
-                                        <%= i+1 %>
-                                    </td>
-                                    <td>
-                                        <%= semester[i].name %>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="edit" value="<%= semester[i].id %>"><i
-                                                class='far fa-edit'></i></button>
-                                    </td>
-                                    <td>
-                                        <button type='submit' name="delete" value="<%= semester[i].id %>"
-                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
-                                    </td>
-                                </tr>
-                                <% } %>
-                                    <% } %>
-                </table>
+                <ul class="table-responsive-lg">
+                    <li class="thead-dark">
+                        <div class="col col-1">SR No</div>
+                        <div class="col col-2">Name</div>
+                        <div class="col col-5">Edit</div>
+                        <div class="col col-6">Delete</div>
+                    </li>
+
+                    <% for (var i=0; i <semester.length; i++) { %>
+
+                        <li class="table-row">
+                            <div class="col col-1" data-label="#">
+                                <%= i+1 %>
+                            </div>
+                            <div class="col col-2" data-label="Student ID">
+                                <%= semester[i].name %>
+                            </div>
+                            <div class="col col-5" data-label="Name">
+                                <button type='submit' name="edit" value="<%= semester[i].id %>"><i
+                                    class='far fa-edit'></i></button>
+                            </div>
+                            <div class="col col-6" data-label="Batch">
+                                <button type='submit' name="delete" value="<%= semester[i].id %>"
+                                    class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                            </div>
+                        </li>
+                    <% } %>
+                </ul>
             </form>
 
             <br>
             <button onclick="window.location.href = '/addSemester'"> Add Semester </button>
         </div>
+
+    </section>
 
 
         <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
