Final home page and updated table

--- a/Project/MernBackend/templates/partials/navbar.ejs
+++ b/Project/MernBackend/templates/partials/navbar.ejs
@@ -5,30 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:wght@100;200;300;400;600;700&family=Rubik+Moonrocks&family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
      <!-- <title> Student Information System </title>  -->
 </head>
 
 <body>
-    <nav class="navbar background nav-height-resp">
-        <ul class="nav-list visibility-class-resp">
-            <div class="logo"><img src="/img/clubs.jpg" alt="Logo"></div>
-            <li> <a href="/">Home</a> </li>
-            <!-- <li> <a href="#about">About</a> </li>
-            <li> <a href="#services">Services</a> </li> -->
-            <li> <a href="#contact">Contact Us</a> </li>
+    <nav>
+        <a href:="/"><img src="/img/logo1-1.png" alt=""></a>
+    <div class="nav-links" id="navLink">
+        <ul>
+            <li><a href="/" class="active">HOME</a></li>
+            <li><a href="/support">SUPPORT</a></li>
         </ul>
-        <div class="rightNav visibility-class-resp">
-            <ul class="right-nav-list">
-                <li><a href="/login">Login</a></li>
-            </ul>
-        </div>
-        <div class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-        </div>
-    </nav>
+    </div>
+   </nav>
 </body>
 
 </html>
