--- a/Project/MernBackend/public/css/style.css
+++ b/Project/MernBackend/public/css/style.css
@@ -1,216 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-}
-.table-responsive-lg{
-    /* background: url("/img/table_image.jpg"); */
-    text-align: center;
-    padding-left: 290px;
-    padding-right: 150px;
-    margin: 30px;
+    font-family: "Poppins", sans-serif;
 }
 
-tr:nth-child(even){
-    background-color:rgb(190,190,190);
-}
-
-.table{
-    /* background: url("/img/table_image.jpg"); */
-    border: solid;
-}
-
-.thead-dark{
-    background-color: black;
-    color: white;
-}
-
-.table-image{
-    vertical-align: middle;
-}
-
-.img-thumbnail{
-    height: 45mm;
-    width: 35mm;
-}
-
-#myVideo {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-}
-
-.logo {
-    width: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo img {
-    width: 40%;
-    border: 3px solid white;
-    border-radius: 10px;
-}
-
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
-    top: 0;
-    cursor: pointer;
-    background-color: black;
-}
-
-.nav-list {
-    width: 70%;
-    align-items: center;
-    display: flex;
-}
-
-.nav-list li {
-    list-style: none;
-    padding: 26px 30px;
-}
-
-.nav-link{
-    text-decoration: none;
-    color: white;
-    font-size: 19px;
-}
-
-.nav-list li a {
-    text-decoration: none;
-    color: white;
-    font-size: 21px;
-}
-
-.nav-list li a:hover {
-    text-decoration: none;
-    color: violet;
-}
-
-.rightNav {
-    width: 30%;
-    text-align: right;
-    padding: 13px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.right-nav-list {
-    display: flex;
-}
-
-.right-nav-list li {
-    list-style: none;
-    padding: 26px 30px;
-}
-
-.right-nav-list li a {
-    text-decoration: none;
-    color: white;
-    font-size: 19px;
-}
-
-.right-nav-list li a:hover {
-    text-decoration: none;
-    color: violet;
-}
-
-.rightNav-search {
-    padding: 25px 0px;
-    font-size: 20px;
-    border-radius: 9px;
+body{
+    background: #ececec;
 }
 
 .content {
     text-align: center;
+    margin: 100px;
 }
 
 .content h1 {
-    font-size: 55px;
-    color:white;
+    font-size: 50px;
+    color: black;
     font-weight: 500;
-    margin: 50px;
-}
-
-.content p {
-    font-size: 20px;
-    color:rgba(255, 255, 255, 0.671);
-    margin: 20px;
-    padding: 40px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .btn {
     background-color: #4CAF50;
     border: none;
-    color: white;
     padding: 16px 36px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
     font-size: 18px;
     cursor: pointer;
     width: fit-content;
+    margin: 65px;
 }
 
-/* responsive */
-
-.burger{
-    display: none;
-    position: absolute;
-    cursor: pointer;
-    right: 5%;
-    top: 15px;
+.btn a{
+    text-decoration: none;
+    color: white;
 }
 
-.line{
-    width: 33px;
-    background-color: white;
-    height: 4px;
-    margin: 3px 3px;
-}
-.firstSection{
-    background-image: url("/img/black-background-08-vecteezy.png");
-    height: 84.5vh;
+.btn a:hover{
+    text-decoration: none;
+    color: white;
 }
 
-@media only screen and (max-width: 1000px){
-    .nav-list{
-        flex-direction: column;
-    }
-    .navbar{
-        flex-direction: column;
-        transition: all 0.7s ease-out;
-        height: 325px;
-    }
-    .rightNav{
-        text-align: center;
-        width: 100%;
+@media only screen and (max-width: 900px){
+    .content{
+        margin: 70px;
         justify-content: center;
     }
-    .burger{
-        display: block;
-    }
-    .nav-height-resp{
-        height: 60px;
-    }
-    .visibility-class-resp{
-        opacity: 0;
-    }
-    .firstSection{
-        width: fit-content;
-        height: fit-content;
-        margin: 0px;
-        padding: 0px;
-        overflow-x: hidden;
-    }
-    .table-responsive-lg{
-        margin: 0;
-        padding: 10px;
+}
+
+@media only screen and (max-width: 700px){
+    .content{
+        margin: 30px;
+        justify-content: center;
     }
 }
