--- a/Project/MernBackend/templates/views/tables.ejs
+++ b/Project/MernBackend/templates/views/tables.ejs
@@ -1,67 +1,69 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Document</title>
-</head>
-
-<body>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
-    <div class="table-responsive-lg">
-      <table class="table table-bordered table-image">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">COL1</th>
-            <th scope="col">COL2</th>
-            <th scope="col">COL3</th>
-            <th scope="col">COL4</th>
-            <th scope="col">COL5</th>
-            <th scope="col">COL6</th>
-            <th scope="col">PROFILE</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>abcd</td>
-            <td>abcd</td>
-            <td>abcd</td>
-            <td><img src= "https://source.unsplash.com/random" class="img-thumbnail" alt="profile"></td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>abcd</td>
-            <td>abcd</td>
-            <td>abcd</td>
-            <td><img src="https://source.unsplash.com/random" class="img-thumbnail" alt="profile"></td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-            <td>abcd</td>
-            <td>abcd</td>
-            <td>abcd</td>
-            <td><img src="https://source.unsplash.com/random" class="img-thumbnail" alt="profile"></td>
-          </tr>
-        </tbody>
-      </table>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/table.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <ul class="table-responsive-lg">
+        <li class="thead-dark">
+          <div class="col col-1">#</div>
+          <div class="col col-2">Student ID</div>
+          <div class="col col-3">Name</div>
+          <div class="col col-4">Batch</div>
+          <div class="col col-5">Branch</div>
+          <div class="col col-6">Image</div>
+        </li>
+        <li class="table-row">
+          <div class="col col-1">1</div>
+          <div class="col col-2">201001111</div>
+          <div class="col col-3">Joe Bidden</div>
+          <div class="col col-4">BTech</div>
+          <div class="col col-5">ICT</div>
+          <div class="col col-6">
+            <img
+              src="https://freepngdownload.com/image/thumb/number-1-png-free-download-3.png"
+              class="img-thumbnail"
+              alt="profile"
+            />
+          </div>
+        </li>
+        <li class="table-row">
+          <div class="col col-1">2</div>
+          <div class="col col-2">201201222</div>
+          <div class="col col-3">Barak Obama</div>
+          <div class="col col-4">MSc</div>
+          <div class="col col-5">Data Science</div>
+          <div class="col col-6">
+            <img
+              src="https://freepngdownload.com/image/thumb/number-1-png-free-download-3.png"
+              class="img-thumbnail"
+              alt="profile"
+            />
+          </div>
+        </li>
+        <li class="table-row">
+          <div class="col col-1">3</div>
+          <div class="col col-2">201001333</div>
+          <div class="col col-3">Narendra Modi</div>
+          <div class="col col-4">MTech</div>
+          <div class="col col-5">Machine Learning</div>
+          <div class="col col-6">
+            <img
+              src="https://freepngdownload.com/image/thumb/number-1-png-free-download-3.png"
+              class="img-thumbnail"
+              alt="profile"
+            />
+          </div>
+        </li>
+      </ul>
     </div>
-</body>
-
+  </body>
 </html>
